--- a/service.yaml
+++ b/service.yaml
@@ -5,6 +5,9 @@ metadata:
 spec:
   type: NodePort
   selector:
-    app: # TO COMPLETE
+    app:
+      kubernetes-bootcamp
+      # HAS BEEN COMPLETED
   ports:
-    - port: # TO COMPLETE
+    - port: 8080
+      # HAS BEEN COMPLETED
